--- a/git_sql-server-deployment.yaml
+++ b/git_sql-server-deployment.yaml
@@ -29,7 +29,7 @@ kind: Deployment
 metadata:
   name: sql-server-deployment
 spec:
-  replicas: 1
+  replicas: 2  # Number of replicas increased to 2
   selector:
     matchLabels:
       app: sql-server
