--- a/git_sql-server-deployment.yaml
+++ b/git_sql-server-deployment.yaml
@@ -1,4 +1,4 @@
-# sql-server-deployment.yaml
+# Git-sql-server-deployment.yaml
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -29,7 +29,7 @@ kind: Deployment
 metadata:
   name: sql-server-deployment
 spec:
-  replicas: 2  # Number of replicas increased to 2
+  replicas: 1  # Number of replicas increased to 2
   selector:
     matchLabels:
       app: sql-server
